--- a/index.html
+++ b/index.html
@@ -10,5 +10,24 @@
     />
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <ul class="navbar">
+        <li class="nav-item">
+          <img src="./images/food.svg" class="nav-item-icon" />
+          <h3 id="food-counter">0</h3>
+        </li>
+        <li class="nav-item">
+          <img src="./images/trophy.svg" class="nav-item-icon" />
+          <h3 id="high-score">0</h3>
+        </li>
+        <li class="nav-item item-right">
+          <button class="nav-btn" id="pause-play-btn">
+            <img src="./images/pause.svg" class="nav-btn-icon" />
+          </button>
+        </li>
+      </ul>
+      <div class="game-board"></div>
+    </div>
+  </body>
 </html>
