--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
           </button>
         </li>
       </ul>
-      <div class="game-board"></div>
+      <div class="game-board">
+        <div class="snake"></div>
+        <div class="snake"></div>
+        <div class="snake"></div>
+        <div class="food"></div>
+      </div>
     </div>
   </body>
 </html>
