--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
           </button>
         </li>
       </ul>
-      <div class="game-board">
-        <div class="snake"></div>
-        <div class="snake"></div>
-        <div class="snake"></div>
-        <div class="food"></div>
+      <div class="game-container">
+        <div class="overlay">
+          <h1 class="overlay-text">Press SPACE to start game</h1>
+        </div>
+        <canvas id="game-board" width="800" height="800"></canvas>
       </div>
     </div>
   </body>
