Grid styles corrected

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
         <div class="overlay">
           <h1 class="overlay-text">Press SPACE to start game</h1>
         </div>
-        <canvas id="game-board" width="800" height="800"></canvas>
+        <div class="game-board">
+          <div class="snake"></div>
+          <div class="snake"></div>
+          <div class="snake"></div>
+          <div class="food"></div>
+        </div>
       </div>
     </div>
   </body>
