--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
+    <script type="module" defer src="./js/index.js"></script>
   </head>
   <body>
     <div class="container">
