--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <h2 class="modal-header">Game Over</h2>
             <div class="score-group">
               <img src="./images/food.svg" class="modal-summary-icon" />
-              <h4 class="score">2</h4>
+              <h4 class="score" id="score-counter">0</h4>
             </div>
             <div class="score-group">
               <img src="./images/trophy.svg" class="modal-summary-icon" />
-              <h4 class="score">2</h4>
+              <h4 class="score" id="high-score-counter">0</h4>
             </div>
             <button class="modal-btn" id="play-again-btn">Play Again</button>
           </div>
