All scripts added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
           <h2 id="high-score">0</h2>
         </li>
         <li class="nav-item item-right">
-          <button class="nav-btn" id="pause-play-btn">
+          <button
+            data-button="pause"
+            class="nav-btn hidden"
+            id="pause-play-btn"
+          >
             <img src="./images/pause.svg" class="nav-btn-icon" />
           </button>
         </li>
